[package]
name = "telegram_alarm_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.10", features = ["macros", "auto-send"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
rumqttc = "0.15.0"
serde = "1.0.144"
serde_json = "1.0.85"
regex = "1.6.0"
lazy_static = "1.4.0"
compound_duration = "1.2.0"

[profile.release]
panic = 'abort'
