[package]
name = "telegram_alarm_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.10", features = ["macros", "auto-send"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros", "signal"] }
rumqttc = "0.15.0"
serde = { version = "1.0.144", features = ["serde_derive"] }
serde_json = "1.0.85"
regex = "1.6.0"
lazy_static = "1.4.0"
compound_duration = "1.2.0"
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "3.2.21", features = ["derive"] }
derive_more = { version = "0.99.17", default-features = false, features = ["deref", "deref_mut"] }

[profile.release]
panic = 'abort'
